fix: tabs in wrapped line broke cursor navigation Is there a better/faster way? - todo: forward port Thanks to Ruud Koolen for the patch!

CCMAIL: kwrite-devel@kde.org
BUG: 94693

svn path=/branches/KDE/3.5/kdelibs/; revision=668824